--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -3,11 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
+	
+	<h:head/>
 
 	<h:body>
 		<h1>Novo Livro</h1>
 		<h:form>
-			<h:messages />
+			<h:messages id="messages" />
 			<fieldset>
 				<legend>Dados do Livro</legend>
 				<h:panelGrid columns="2">
@@ -17,6 +19,7 @@
 						required="true" requiredMessage="Título obrigatório"
 						validatorMessage="T ítulo não pode ser superior a 40">
 						<f:validateLength maximum="40" />
+						<f:ajax event="blur" render="messages"/>
 					</h:inputText>
 
 					<h:outputLabel value="ISBN:" for="isbn" />
@@ -40,25 +43,33 @@
 				<legend>Dados do Autor</legend>
 
 				<h:outputLabel value="Selecione Autor:" for="autor" />
-				<h:selectOneMenu value="#{livroBean.autorId}">
+				<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
 					<f:selectItems value="#{livroBean.autores}" var="autor"
 						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
 				</h:selectOneMenu>
-				<h:commandButton value="Gravar Autor"
-					action="#{livroBean.gravarAutor}" />
-	
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}">
+	          <f:ajax execute="autor" render="tabelasAutores"/>
+	          </h:commandButton>
+	          	          <br />
+	          	          
+	          <h:commandLink value="Cadastrar novo Autor" action="autor"/>
+
+	          
+	 				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelasAutores">
 					<h:column>
 						<h:outputText value="#{autor.nome}" />
 					</h:column>
 				</h:dataTable>
 			</fieldset>
 
-			<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+			<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+			<f:ajax execute="@form" render="@form :tabelaLivros"/>			
+			</h:commandButton>
+			
 
 		</h:form>
 	
-		<h:dataTable value="#{livroBean.livros}" var="livro">
+		<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
 			<h:column>
 				<f:facet name="header">Título</f:facet>
 				<h:outputText value="#{livro.titulo}" />
