--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -68,12 +68,11 @@
 		</fieldset>
 
 		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
-			<f:ajax execute="@form" render="@form :tabelaLivros" />
+			<f:ajax execute="@form" render="@form :formTabelaLivros:tabelaLivros" />
 		</h:commandButton>
-
-
 	</h:form>
-
+	
+	<h:form id="formTabelaLivros">
 	<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
 		<h:column>
 			<f:facet name="header">Título</f:facet>
@@ -96,7 +95,12 @@
 				<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
 			</h:outputText>
 		</h:column>
+		<h:column>
+			<f:facet name="header">Remover</f:facet>
+		   <h:commandLink value="remove" action="#{livroBean.remover(livro)}"/>
+		</h:column>
 	</h:dataTable>
+	</h:form>
 </ui:define>
 </ui:composition>
 
