--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -1,107 +1,108 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+xmlns:h="http://xmlns.jcp.org/jsf/html"
+ xmlns:f="http://xmlns.jcp.org/jsf/core"
+ xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="_template.xhtml">
+
 	<ui:define name="titulo">
-	Novo livro
+		Novo Livro
 	</ui:define>
+
 	<ui:define name="conteudo">
-	<h:form>
-		<h:messages id="messages" />
-		<fieldset>
-			<legend>Dados do Livro</legend>
-			<h:panelGrid columns="2">
+		<h:form>
 
-				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
-					required="true" requiredMessage="Título obrigatório"
-					validatorMessage="T ítulo não pode ser superior a 40">
-					<f:validateLength maximum="40" />
-					<f:ajax event="blur" render="messages" />
-				</h:inputText>
+			<h:messages id="messages" />
 
-				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
-					validator="#{livroBean.comecaComDigitoUm}" />
+			<fieldset>
+				<legend>Dados do Livro</legend>
+				<h:panelGrid columns="2">
 
-				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
+					<h:outputLabel value="Titulo:" for="titulo" />
+					<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" requiredMessage="Título obrigatório" validatorMessage="Título não pode ser superior a 40">
+						<f:validateLength maximum="40" />
+						<f:ajax event="blur" render="messages" />
+					</h:inputText>
 
-				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento.time}">
-					<f:convertDateTime pattern="dd/MM/yyyy"
-						timeZone="America/Sao_Paulo" />
-				</h:inputText>
+					<h:outputLabel value="ISBN:" for="isbn" />
+					<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" />
 
-			</h:panelGrid>
-		</fieldset>
+					<h:outputLabel value="Preço:" for="preco" />
+					<h:inputText id="preco" value="#{livroBean.livro.preco}" />
 
-		<fieldset>
-			<legend>Dados do Autor</legend>
+					<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
+					<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
+					</h:inputText>
 
-			<h:outputLabel value="Selecione Autor:" for="autor" />
-			<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
-				<f:selectItems value="#{livroBean.autores}" var="autor"
-					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
-			</h:selectOneMenu>
-			<h:commandButton value="Gravar Autor"
-				action="#{livroBean.gravarAutor}">
-				<f:ajax execute="autor" render="tabelasAutores" />
+				</h:panelGrid>
+
+			</fieldset>
+
+			<fieldset>
+				<legend>Dados do Autor</legend>
+
+				<h:outputLabel value="Selecione Autor:" for="autor" />
+				<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
+					<f:selectItems value="#{livroBean.autores}" var="autor" itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+				</h:selectOneMenu>
+				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}">
+					<f:ajax execute="autor" render="tabelaAutores" />
+				</h:commandButton>
+
+				<br />
+
+				<h:commandLink value="Cadastrar novo autor" action="#{livroBean.formAutor}" immediate="true" />
+
+				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
+					<h:column>
+						<h:outputText value="#{autor.nome}" />
+					</h:column>
+					<h:column>
+						<h:commandLink value="X" action="#{livroBean.removerAutorDoLivro(autor)}" />
+					</h:column>
+				</h:dataTable>
+			</fieldset>
+			<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+				<f:ajax execute="@form" render="@form :formTabelaLivros:tabelaLivros" />
 			</h:commandButton>
-			<br />
+		</h:form>
 
-			<h:commandLink value="Cadastrar novo Autor"
-				action="#{livroBean.formAutor}" immediate="true" />
-
-
-			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
-				id="tabelasAutores">
+		<h:form id="formTabelaLivros">
+			<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
 				<h:column>
-					<h:outputText value="#{autor.nome}" />
+					<f:facet name="header">Título</f:facet>
+					<h:outputText value="#{livro.titulo}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">ISBN</f:facet>
+					<h:outputText value="#{livro.isbn}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Preço</f:facet>
+					<h:outputText value="#{livro.preco}">
+						<f:convertNumber type="currency" pattern="R$ #0.00" currencySymbol="R$" locale="pt_BR" />
+					</h:outputText>
+				</h:column>
+				<h:column>
+					<f:facet name="header">Data</f:facet>
+					<h:outputText value="#{livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
+					</h:outputText>
+				</h:column>
+				<h:column>
+					<f:facet name="header">Alterar</f:facet>
+					<h:commandLink value="Alterar" action="#{livroBean.carregar(livro)}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Remover</f:facet>
+					<h:commandLink value="Remover" action="#{livroBean.remover(livro)}" />
 				</h:column>
 			</h:dataTable>
-		</fieldset>
-
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
-			<f:ajax execute="@form" render="@form :formTabelaLivros:tabelaLivros" />
-		</h:commandButton>
-	</h:form>
-	
-	<h:form id="formTabelaLivros">
-	<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
-		<h:column>
-			<f:facet name="header">Título</f:facet>
-			<h:outputText value="#{livro.titulo}" />
-		</h:column>
-		<h:column>
-			<f:facet name="header">ISBN</f:facet>
-			<h:outputText value="#{livro.isbn}" />
-		</h:column>
-		<h:column>
-			<f:facet name="header">Preço</f:facet>
-			<h:outputText value="#{livro.preco}">
-				<f:convertNumber type="currency" pattern="R$ #0.00"
-					currencySymbol="R$" locale="pt_BR" />
-			</h:outputText>
-		</h:column>
-		<h:column>
-			<f:facet name="header">Data</f:facet>
-			<h:outputText value="#{livro.dataLancamento.time}">
-				<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
-			</h:outputText>
-		</h:column>
-		<h:column>
-			<f:facet name="header">Remover</f:facet>
-		   <h:commandLink value="remove" action="#{livroBean.remover(livro)}"/>
-		</h:column>
-	</h:dataTable>
-	</h:form>
-</ui:define>
+		</h:form>
+	</ui:define>
 </ui:composition>
 
 </html>
