--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -32,8 +32,7 @@
 						<h:message for="nome" id="messageNome" />
 						
 						<h:outputLabel value="Email:" for="email" />
-						<h:inputText id="email" value="#{autorBean.autor.email}"
-							required="true">
+						<h:inputText id="email" value="#{autorBean.autor.email}" required="true">
 							<f:passThroughAttribute name="type" value="email" />
 						</h:inputText>
 
