--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -23,21 +23,15 @@
 						<h:inputText id="email" value="#{loginBean.usuario.email}"	required="true">
 						<f:passThroughAttribute name="type" value="email" />
 						</h:inputText>					
-						<h:message for="email" id="messageNome" />
-						
+						<h:message for="email" id="messageEmail" />						
 						<h:outputLabel value="Senha:" for="senha" />
 						<h:inputText id="senha" value="#{loginBean.usuario.senha}" required="true">
 							<f:passThroughAttribute name="type" value="password" />
 						</h:inputText>
-
 						<h:message for="Senha" id="messageSenha" />
-
 						<h:commandButton value="Efetue Login" action="#{loginBean.efetuaLogin}" />
 					</h:panelGrid>
 				</fieldset>
-			
-			
-			
 			</h:form>
 		</ui:define>
 
