--- a/WebContent/_template.xhtml
+++ b/WebContent/_template.xhtml
@@ -9,6 +9,11 @@
 	<h:body>
 		<div id="cabecalho">
 			<h:graphicImage library="img" name="logo.png" />
+            
+            <h:form rendered="#{usuarioLogado != null}">
+            <h:commandLink value="Logout" action="#{loginBean.deslogar}"/>
+            
+            </h:form>
 
 			<h1>
 				<ui:insert name="titulo"></ui:insert>
