--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -7,33 +7,32 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<ui:composition template="_template.xhtml">
-	
-		
-		
+
 		<ui:define name="titulo">
 				Login
 		</ui:define>
 
 		<ui:define name="conteudo">
-		<h:messages globalOnly="true"/>
+		
+			<p:messages globalOnly="true" />
+		
 			<h:form id="login">
-				<fieldset>
-					<legend>Login</legend>
+				<p:fieldset legend="Login">
 					<h:panelGrid columns="3">
 
-						<h:outputLabel value="Email:" for="email" />
-						<h:inputText id="email" value="#{loginBean.usuario.email}"	required="true">
-						<f:passThroughAttribute name="type" value="email" />
-						</h:inputText>					
-						<h:message for="email" id="messageEmail" />						
-						<h:outputLabel value="Senha:" for="senha" />
-						<h:inputText id="senha" value="#{loginBean.usuario.senha}" required="true">
-							<f:passThroughAttribute name="type" value="password" />
-						</h:inputText>
-						<h:message for="Senha" id="messageSenha" />
-						<h:commandButton value="Efetue Login" action="#{loginBean.efetuaLogin}" />
+						<p:outputLabel value="Email:" for="email" />
+						<p:inputText id="email" value="#{loginBean.usuario.email}" required="true">
+							<f:passThroughAttribute name="type" value="email" />
+						</p:inputText>
+						<p:message for="email" id="messageEmail" />
+						
+						<p:outputLabel value="Senha:" for="senha" />
+						<p:password id="senha" value="#{loginBean.usuario.senha}" feedback="true" required="true" />
+						<p:message for="senha" id="messageSenha" />
+
+						<p:commandButton value="Efetue Login" action="#{loginBean.efetuaLogin}" update="@form" process="@form" />
 					</h:panelGrid>
-				</fieldset>
+				</p:fieldset>
 			</h:form>
 		</ui:define>
 
