--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<ui:composition template="_template.xhtml">
+	
+		<f:metadata>
+			<f:viewParam name="livroId" value="#{livroBean.livro.id}" />
+			<f:viewAction action="#{livroBean.carregarLivroPelaId}" if="#{param.livroId != null}" />
+		</f:metadata>
+	
 
 		<ui:define name="titulo">
 				Novo Livro
@@ -64,12 +70,13 @@
 					<h:commandLink value="Cadastrar novo autor"
 						action="#{livroBean.formAutor}" immediate="true" />
 	
-					<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
+					<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+						id="tabelaAutores">
 						<h:column>
 							<h:outputText value="#{autor.nome}" />
 						</h:column>
 						<h:column>
-							<h:commandLink value="X" action="#{livroBean.removerAutorDoLivro(autor)}" />
+							<h:commandLink value="X" action="#{livroBean.removerAutorDoLivro(autor)}"/>
 						</h:column>
 					</h:dataTable>
 				</fieldset>
@@ -79,39 +86,41 @@
 			</h:form>
 	
 			<h:form id="formTabelaLivros">
-				<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
-					<h:column>
-						<f:facet name="header">Título</f:facet>
-						<h:outputText value="#{livro.titulo}" />
-					</h:column>
-					<h:column>
-						<f:facet name="header">ISBN</f:facet>
-						<h:outputText value="#{livro.isbn}" />
-					</h:column>
-					<h:column>
-						<f:facet name="header">Preço</f:facet>
-						<h:outputText value="#{livro.preco}">
-							<f:convertNumber type="currency" pattern="R$ #0.00"
-								currencySymbol="R$" locale="pt_BR" />
-						</h:outputText>
-					</h:column>
-					<h:column>
-						<f:facet name="header">Data</f:facet>
-						<h:outputText value="#{livro.dataLancamento.time}">
-							<f:convertDateTime pattern="dd/MM/yyyy"
-								timeZone="America/Sao_Paulo" />
-						</h:outputText>
-					</h:column>
-					<h:column>
-						<f:facet name="header">Alterar</f:facet>
-						<h:commandLink value="Alterar" action="#{livroBean.carregar(livro)}"/>
-					</h:column>
-					<h:column>
-						<f:facet name="header">Remover</f:facet>
-						<h:commandLink value="Remover" action="#{livroBean.remover(livro)}"/>
-					</h:column>
-				</h:dataTable>
-			</h:form>
+			<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
+				<h:column>
+					<f:facet name="header">Título</f:facet>
+					<h:outputText value="#{livro.titulo}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">ISBN</f:facet>
+					<h:outputText value="#{livro.isbn}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Preço</f:facet>
+					<h:outputText value="#{livro.preco}">
+						<f:convertNumber type="currency" pattern="R$ #0.00"
+							currencySymbol="R$" locale="pt_BR" />
+					</h:outputText>
+				</h:column>
+				<h:column>
+					<f:facet name="header">Data</f:facet>
+					<h:outputText value="#{livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy"
+							timeZone="America/Sao_Paulo" />
+					</h:outputText>
+				</h:column>
+				
+				<h:column>
+					<f:facet name="header">Alterar</f:facet>
+					<h:commandLink value="altera" action="#{livroBean.carregar(livro)}"/>
+				</h:column>					
+				
+				<h:column>
+					<f:facet name="header">Remover</f:facet>
+					<h:commandLink value="remove" action="#{livroBean.remover(livro)}"/>
+				</h:column>	
+			</h:dataTable>
+			</h:form>			
 		</ui:define>
 	</ui:composition>
 
