--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui" 
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<ui:composition template="_template.xhtml">
@@ -22,8 +23,8 @@
 
 				<h:messages id="messages" />
 
-				<fieldset>
-					<legend>Dados do Livro</legend>
+				<p:fieldset legend="Dados do Livro">
+					
 					<h:panelGrid columns="2">
 
 						<h:outputLabel value="Titulo:" for="titulo" />
@@ -50,7 +51,7 @@
 
 					</h:panelGrid>
 
-				</fieldset>
+				</p:fieldset>
 	
 				<fieldset>
 					<legend>Dados do Autor</legend>
